--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,10 +10,10 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--Import Google Icon Font-->
-        <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        
         <!--Import materialize.css-->
         <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-        <link type="text/css" rel="stylesheet" href="css.css"/>
+        <link type="text/css" rel="stylesheet" href="css/css.css"/>
         <link rel="shortcut icon" type="image/png" href="img/sistemasInformacao.png"/>
 
     </head>
@@ -41,7 +41,7 @@ and open the template in the editor.
         <div class="slider">
             <ul class="slides">
                 <li>
-                    <img src="img/img_como_saber_as_cores_exatas_de_uma_imagem_12964_300.jpg"> <!-- random image -->
+                    <img src="img/1.png"> <!-- random image -->
                     <div class="caption center-align">
                         <h3>Ideias Movem o Mundo</h3>
                     </div>
@@ -108,7 +108,7 @@ and open the template in the editor.
 
         <div class="row">
 
-            <div class="col s4 ">
+            <div class="col s12 m4">
                 <div class="col s12 m8 offset-m2 l6 offset-l3">
                     <div class="col s12">
                         <img src="img/pessoa1.jpg" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
@@ -117,7 +117,7 @@ and open the template in the editor.
                     </div>
                 </div>
             </div>
-            <div class="col s4">
+            <div class="col s12  m4">
                 <div class="col s12 m8 offset-m2 l6 offset-l3">
                     <div class="col s12">
                         <img src="img/pessoa2.png" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
@@ -126,7 +126,7 @@ and open the template in the editor.
                     </div>
                 </div>
             </div>
-            <div class="col s4">
+            <div class="col s12 m4">
                 <ul class="collapsible popout" data-collapsible="accordion">
 
                     <li>
@@ -265,9 +265,9 @@ and open the template in the editor.
         </div>
 
 
-        <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script type="text/javascript" src="js/jquery-2.js"></script>
         <script type="text/javascript" src="js/materialize.min.js"></script>
-        <script type="text/javascript" src="JS.js"></script>
+        <script type="text/javascript" src="js/JS.js"></script>
 
 
     </body>
